# news-impact-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_CN.md  SECURITY.md  TEST_REPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  security.yml
docs/: API.md  FAIL_FAST.md  README_Quickstart.md
examples/: basic_usage.py  cli_usage.py  multi_news_analysis.py
src/news_impact/: __init__.py  analyzer.py  cli.py  config.py  llm_client.py  models.py  prompts.py  sectors.py
tests/: test_analyzer.py  test_config.py  test_fail_fast.py  test_full_system.py  test_models.py  test_sectors.py
